Added support for 1.20.5